fixed awkward table size on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,6 +285,7 @@ table tbody td {
     text-align: left;
     padding-top: 8px;
     padding-bottom: 4px;
+    padding-right: 25px;
     border-bottom: 1px solid #888;
     word-wrap: break-word;
 }
@@ -299,28 +300,5 @@ table tbody td {
     }
     h3 {
         font-size: 1.2em;
-    }
-
-    table thead {
-        display: none;
-    }
-
-    table tbody tr {
-        display: flex;
-        flex-direction: column;
-        border-bottom: 1px solid #888;
-        padding-bottom: 10px;
-    }
-
-    table tbody td {
-        display: flex;
-        justify-content: space-between;
-        padding: 8px 0;
-    }
-
-    table tbody td::before {
-        content: attr(data-label);
-        font-weight: bold;
-        padding-right: 10px;
     }
 }
